<?xml version="1.0"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>io.mosip.admin</groupId>
		<artifactId>admin-parent</artifactId>
		<version>1.3.0-SNAPSHOT</version>
	</parent>
	<artifactId>admin-service</artifactId>
	<name>admin-service</name>
	<version>1.3.0-SNAPSHOT</version>
	<url>http://maven.apache.org</url>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<springdoc.version>1.8.0</springdoc.version>
		<kernel.version>1.3.0-beta.1</kernel.version>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>
		<maven.compiler.version>3.8.0</maven.compiler.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
		<maven.jar.plugin.version>3.0.2</maven.jar.plugin.version>
		<maven.war.plugin.version>3.1.0</maven.war.plugin.version>
		<maven.jacoco.version>0.8.11</maven.jacoco.version>
		<maven.sonar.plugin.version>3.7.0.1746</maven.sonar.plugin.version>
		<maven-shade-plugin.version>2.3</maven-shade-plugin.version>
		<maven.surefire.plugin.version>2.22.0</maven.surefire.plugin.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.mosip.kernel</groupId>
				<artifactId>kernel-bom</artifactId>
				<version>1.3.0-beta.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<!--<dependency>
				<groupId>org.webjars</groupId>
				<artifactId>webjars-locator-core</artifactId>
				<version>0.45</version>
			</dependency>-->

		</dependencies>
	</dependencyManagement>
	<dependencies>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-core</artifactId>
			<version>${kernel.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-to-slf4j</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>commons-io</groupId>
		    <artifactId>commons-io</artifactId>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>5.2.5</version>
		</dependency>
		<dependency>
		  <groupId>org.springframework.batch.extensions</groupId>
		  <artifactId>spring-batch-excel</artifactId>
		  <version>0.1.0</version>
		</dependency>
	
	    <dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-authcodeflowproxy-api</artifactId>
			<version>1.3.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-dataaccess-hibernate</artifactId>
			<version>${kernel.version}</version>
		</dependency>
		<dependency>
	      <groupId>org.springframework.boot</groupId>
	      <artifactId>spring-boot-starter-batch</artifactId>
	    </dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.7.2</version>
		</dependency>
		
		<dependency>
		    <groupId>javax.xml.bind</groupId>
		     <artifactId>jaxb-api</artifactId>
		 </dependency>
		 <dependency>
    		<groupId>com.google.code.gson</groupId>
    		<artifactId>gson</artifactId>
    		<version>2.10.1</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-idvalidator-rid</artifactId>
			<version>${kernel.version}</version>
   		</dependency>
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.5.0</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.commons</groupId>
			<artifactId>commons-packet-manager</artifactId>
			<version>1.3.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.cloud</groupId>
					<artifactId>spring-cloud-starter-config</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-core</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-security</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.vertx</groupId>
					<artifactId>vertx-web</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-auth-adapter</artifactId>
				</exclusion>
				<exclusion>
					<groupId>io.mosip.kernel</groupId>
					<artifactId>kernel-logger-logback</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.digibooster.spring.batch</groupId>
			<artifactId>spring-batch-security</artifactId>
			<version>1.1.0-RELEASE</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-cbeffutil-api</artifactId>
			<version>1.3.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>io.mosip.biometric.util</groupId>
			<artifactId>biometrics-util</artifactId>
			<version>1.3.0-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>com.fasterxml.jackson.dataformat</groupId>
					<artifactId>jackson-dataformat-xml</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate.validator</groupId>
			<artifactId>hibernate-validator</artifactId>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
		</dependency>
		<dependency>
			<groupId>org.bouncycastle</groupId>
			<artifactId>bcutil-jdk18on</artifactId>
			<version>1.78.1</version>
		</dependency>
		<!--<dependency>
			<groupId>io.mosip.kernel</groupId>
			<artifactId>kernel-auth-adapter</artifactId>
			<version>1.2.1-java21-SNAPSHOT</version>
			<exclusions>
				<exclusion>
					<groupId>org.springframework.boot</groupId>
					<artifactId>spring-boot-starter-webflux</artifactId>
				</exclusion>
			</exclusions>
		</dependency>-->
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<executable>true</executable>
					<layout>ZIP</layout>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!--<plugin>

				<groupId>org.apache.maven.plugins</groupId>

				<artifactId>maven-compiler-plugin</artifactId>

				<version>${maven.compiler.version}</version>

				<configuration>

					<source>${maven.compiler.source}</source>

					<target>${maven.compiler.target}</target>

					<compilerArgs>

						<arg>-parameters</arg> &lt;!&ndash; Include the -parameters flag &ndash;&gt;

					</compilerArgs>

				</configuration>

			</plugin>
-->			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven.surefire.plugin.version}</version>
				<configuration>
					<skipTests>${skipTests}</skipTests>
					<skip>false</skip>
					<argLine>
						${argLine} --add-opens java.xml/jdk.xml.internal=ALL-UNNAMED
						--add-modules=ALL-SYSTEM
						--add-opens=java.base/java.lang=ALL-UNNAMED
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
<profiles>
<profile>
<id>openapi-doc-generate-profile</id>
<dependencies>
	<dependency>
		<groupId>io.mosip.kernel</groupId>
		<artifactId>kernel-auth-adapter</artifactId>
		<version>${project.version}</version>
	</dependency>
	<dependency>
		<groupId>io.netty</groupId>
		<artifactId>netty-transport</artifactId>
		<version>4.1.72.Final</version>
	</dependency>
</dependencies>
<build>
	<plugins>
		<plugin>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-maven-plugin</artifactId>
			<version>3.2.3</version>
			<configuration>
				<executable>true</executable>
				<layout>ZIP</layout>
			</configuration>
			<executions>
				<execution>
					<id>pre-integration-test</id>
					<goals>
						<goal>start</goal>
					</goals>
					<configuration>
						<folders>
							<folder>src/test/resources</folder>
						</folders>
						<profiles>
							<profile>test</profile>
						</profiles>
						<arguments>
							<argument>--server.port=8090</argument>
							<argument>--server.servlet.context-path=/app/generic</argument>
						</arguments>

					</configuration>
				</execution>
				<execution>
					<id>post-integration-test</id>
					<goals>
						<goal>stop</goal>
					</goals>
				</execution>
				<execution>
					<goals>
						<goal>build-info</goal>
						<goal>repackage</goal>
					</goals>
				</execution>
			</executions>
		</plugin>
		<plugin>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-maven-plugin</artifactId>
			<version>1.3</version>
			<executions>
				<execution>
					<id>integration-test</id>
					<goals>
						<goal>generate</goal>
					</goals>
				</execution>
			</executions>
			<configuration>
				<apiDocsUrl>http://localhost:8090/app/generic/v3/api-docs/Admin%20Service</apiDocsUrl>
				<outputFileName>${artifactId}-openapi.json</outputFileName>
				<outputDir>${project.build.directory}</outputDir>
				<skip>false</skip>
			</configuration>
		</plugin>
	</plugins>
</build>
</profile>
		</profiles>
</project>
